methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:3: error: value update is not a member of Boolean
  while (estSurBiscuit()=false){
         ^