methods.slug.SlugHunting.scala.code
def hunt() {
  while (estSurBiscuit()=false){
  	baisseBrosse()
  	isFacingTrail()
  	leveBrosse()
  }
  prendBiscuit()
}

def isFacingTrail():Boolean = {
  var k=false
  if (!estFaceMur){
    avance()
  	if (getCouleurSol()==Color.green){
    	k=true
  		} else {
    		k=false
  		}
    recule()
  }else{
    k= false
  }
  return k
}